--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    @apply bg-neutral-900;
+@layer base {
+    body {
+        @apply bg-slate-800;
+    }
+
+    ::-webkit-scrollbar {
+        @apply bg-neutral-800;
+    }
+    ::-webkit-scrollbar-thumb {
+        @apply bg-neutral-500;
+    }
 }
