added form state

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,7 @@
     }
 }
 
-@layer utilities {
+@layer components {
     .btn-teal {
         @apply p-2 rounded font-medium capitalize ring ring-teal-600 bg-teal-500 text-teal-100 hover:bg-teal-400 active:bg-teal-600 hover:transition;
     }
@@ -47,5 +47,14 @@
     }
     .btn-white {
         @apply p-2 rounded font-medium capitalize ring ring-neutral-300 bg-neutral-200 text-neutral-600 hover:bg-neutral-100 active:bg-neutral-300 hover:transition;
+    }
+    .btn-disabled {
+        @apply p-2 rounded font-medium capitalize ring ring-neutral-400 bg-neutral-300 text-neutral-500;
+    }
+    .bar-cyan {
+        @apply p-2 rounded font-light capitalize bg-cyan-500 ring ring-cyan-600 text-cyan-100;
+    }
+    .bar-fuchsia {
+        @apply p-2 rounded font-medium capitalize bg-fuchsia-500 ring ring-fuchsia-600 text-fuchsia-100;
     }
 }
